logica.js/Correciones: se hacen correciones a la velocidad de la pelota  y se aguregan las instrucciones del juego para esperiencia de usuario

--- a/style.css
+++ b/style.css
@@ -4,19 +4,35 @@
   box-sizing: border-box;
   background-color: rgba(107, 105, 105, 0.493);
 }
+h2 {
+  margin: 10px;
+  text-align: center;
+}
 .meza {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 100px;
-  background-color: beige;
+  background-color: rgb(56, 56, 55);
 }
 
 canvas {
   margin: 10px;
+
   border: solid green;
+  background: rgb(0 110 221);
 }
 header {
   align-items: center;
   text-align: center;
+}
+.instrucciones {
+  text-align: center;
+}
+.instrucciones--titulo {
+  margin: 10px;
+}
+.instrucciones--listaInstrucciones {
+  margin: 10px;
+  font-size: 25px;
 }
