logica.js/Add:  se agrega favicon  y   estilo de letras  para mejor  visualicacion

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   background-color: rgba(107, 105, 105, 0.493);
+  font-family: "Oswald", sans-serif;
 }
 h2 {
   margin: 10px;
