logica.js/fixed: se cambia position de inicio   de la bola y de las raquetas  en el centro del juego y se agregan nuevas velocidades

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ header {
   align-items: center;
   text-align: center;
 }
+.title--header {
+  font-size: 100px;
+}
 .instrucciones {
   text-align: center;
 }
